--- a/Documentation/4x05.md
+++ b/Documentation/4x05.md
@@ -1,9 +1,13 @@
-# 📘 4.5 — REST Webhooks и обратные вызовы (async eventing)
+# 🧱 Блок 4.5 — REST Webhooks и обратные вызовы (async eventing)
+
+---
 
 ## 🆔 Идентификатор блока
 
-* Пакет 4 — Интерфейсы и Интеграции
-* Блок 4.5 — REST Webhooks и обратные вызовы (async eventing)
+* **Пакет:** 4 — Интерфейсы и Интеграции
+* **Блок:** 4.5 — REST Webhooks и обратные вызовы (async eventing)
+
+---
 
 ## 🎯 Назначение
 
