--- a/Documentation/7x01.md
+++ b/Documentation/7x01.md
@@ -1,9 +1,11 @@
-# 7.1 — Метрики, профилирование и наблюдаемость (Prometheus / OpenTelemetry / Perf)
+# 🧱 Блок 7.1 — Метрики, профилирование и наблюдаемость (Prometheus / OpenTelemetry / Perf)
 
-## 🏢 Идентификатор блока
+---
 
-* **Пакет 7 — Observability и DevOps**
-* **Блок 7.1 — Метрики, профилирование и наблюдаемость**
+## 🆔 Идентификатор блока
+
+* **Пакет:** 7 — Observability и DevOps
+* **Блок:** 7.1 — Метрики, профилирование и наблюдаемость (Prometheus / OpenTelemetry / Perf)
 
 ---
 
