--- a/Documentation/7x02.md
+++ b/Documentation/7x02.md
@@ -1,9 +1,13 @@
-# 7.2 — Трассировка запросов и визуализация (Query Timeline / Zipkin / Jaeger)
+# 🧱 Блок 7.2 — Метрики, профилирование и наблюдаемость (Prometheus / OpenTelemetry / Perf)
 
-## 🏢 Идентификатор блока
+---
 
-* **Пакет 7 — Observability и DevOps**
-* **Блок 7.2 — Трассировка и визуализация запросов (Query Execution Tracing)**
+## 🆔 Идентификатор блока
+
+* **Пакет:** 7 — Observability и DevOps
+* **Блок:** 7.2 — Трассировка запросов и визуализация запросов (Query Execution Tracing / Timeline / Zipkin / Jaeger)
+
+---
 
 ## 🌟 Назначение
 
