--- a/Documentation/7x04.md
+++ b/Documentation/7x04.md
@@ -5,6 +5,17 @@
 **Пакет 7 — Observability и DevOps**
 **Блок 7.4 — Структурированное логирование и трассировка событий**
 
+# 🧱 Блок 7.2 — Метрики, профилирование и наблюдаемость (Prometheus / OpenTelemetry / Perf)
+
+---
+
+## 🆔 Идентификатор блока
+
+* **Пакет:** 7 — Observability и DevOps
+* **Блок:** 7.2 — Трассировка запросов и визуализация запросов (Query Execution Tracing / Timeline / Zipkin / Jaeger)
+
+---
+
 ## 🌟 Назначение
 
 Обеспечивает детализированную запись и трассировку событий во время работы СУБД. Позволяет анализировать внутренние процессы на уровне транзакций, запросов, планировщика, памяти и ввода-вывода. Ключевой компонент для отладки, мониторинга и расследования инцидентов.
