--- a/Documentation/7x05.md
+++ b/Documentation/7x05.md
@@ -5,6 +5,17 @@
 **Пакет 7 — Observability и DevOps**
 **Блок 7.5 — Fuzzing, ASAN/TSAN/MSAN**
 
+# 🧱 Блок 7.2 — Метрики, профилирование и наблюдаемость (Prometheus / OpenTelemetry / Perf)
+
+---
+
+## 🆔 Идентификатор блока
+
+* **Пакет:** 7 — Observability и DevOps
+* **Блок:** 7.2 — Трассировка запросов и визуализация запросов (Query Execution Tracing / Timeline / Zipkin / Jaeger)
+
+---
+
 ## 🌟 Назначение
 
 Данный компонент обеспечивает автоматическое выявление ошибок памяти, гонок, неопределённого поведения и потенциальных уязвимостей в коде ядра СУБД путём фаззинг-тестирования и статико-динамического анализа на базе AddressSanitizer (ASAN), ThreadSanitizer (TSAN), MemorySanitizer (MSAN). Используется в CI-пайплайне и при сборке отладочных бинарников.
