--- a/Documentation/7x06.md
+++ b/Documentation/7x06.md
@@ -5,6 +5,17 @@
 **Пакет 7 — Observability и DevOps**
 **Блок 7.6 — Инъекции сбоев и хаос-тестирование**
 
+# 🧱 Блок 7.2 — Метрики, профилирование и наблюдаемость (Prometheus / OpenTelemetry / Perf)
+
+---
+
+## 🆔 Идентификатор блока
+
+* **Пакет:** 7 — Observability и DevOps
+* **Блок:** 7.2 — Трассировка запросов и визуализация запросов (Query Execution Tracing / Timeline / Zipkin / Jaeger)
+
+---
+
 ## 🌟 Назначение
 
 Данный блок предназначен для системной верификации устойчивости in-memory СУБД к сбоям, нестабильности, ошибкам и отказам. Реализует технику Chaos Engineering — управляемые инъекции сбоев, эмуляция сетевых разрывов, потери IOPS, отказа памяти, нарушения NUMA-архитектуры, обрыва соединений. Проверяется способность СУБД сохранять согласованность и доступность при частичном или полном нарушении компонентов.
