--- a/Documentation/7x07.md
+++ b/Documentation/7x07.md
@@ -5,6 +5,17 @@
 **Пакет 7 — Observability и DevOps**
 **Блок 7.7 — Crash Recovery и Full Restart Logic**
 
+# 🧱 Блок 7.2 — Метрики, профилирование и наблюдаемость (Prometheus / OpenTelemetry / Perf)
+
+---
+
+## 🆔 Идентификатор блока
+
+* **Пакет:** 7 — Observability и DevOps
+* **Блок:** 7.2 — Трассировка запросов и визуализация запросов (Query Execution Tracing / Timeline / Zipkin / Jaeger)
+
+---
+
 ## 🌟 Назначение
 
 Блок отвечает за детерминированное восстановление базы данных после аварийных остановов, включая восстановление состояния in-memory таблиц, транзакционных цепочек, кэшированных данных, WAL-журнала и метаданных. Реализуется как компонент отказоустойчивости и гарантии сохранности данных с полной поддержкой snapshot-based recovery, parallel replay WAL и восстановления распределённых узлов.
