--- a/Documentation/7x06.md
+++ b/Documentation/7x06.md
@@ -1,18 +1,11 @@
-# 7.6 — Инъекции сбоев и хаос-тестирование
-
-## 🏢 Идентификатор блока
-
-**Пакет 7 — Observability и DevOps**
-**Блок 7.6 — Инъекции сбоев и хаос-тестирование**
-
-# 🧱 Блок 7.2 — Метрики, профилирование и наблюдаемость (Prometheus / OpenTelemetry / Perf)
+# 🧱 Блок 7.6 — Инъекции сбоев и хаос-тестирование
 
 ---
 
 ## 🆔 Идентификатор блока
 
 * **Пакет:** 7 — Observability и DevOps
-* **Блок:** 7.2 — Трассировка запросов и визуализация запросов (Query Execution Tracing / Timeline / Zipkin / Jaeger)
+* **Блок:** 7.6 — Инъекции сбоев и хаос-тестирование
 
 ---
 
