--- a/Documentation/8x00.md
+++ b/Documentation/8x00.md
@@ -1,1 +1,12 @@
 Нужно Блок 8.6 — Кэширование планов и обратная связь по избирательности
+
+| № блока | Название блока                                                                                |
+| ------- | --------------------------------------------------------------------------------------------- |
+|     8.1 | Производительность и критические задержки (Latency Profiling & Low-Latency OLTP)              |
+|     8.2 | Параллельное выполнение и конвейеры (Parallel Execution & Pipelines)                          |
+|     8.3 | Векторизированный движок выполнения (Vectorized Execution Engine)                             |
+|     8.4 | Адаптивные соединения (Adaptive Joins: Hash, Merge, Nested Loop)                              |
+|     8.5 | Рерантайм-оптимизация и обратная связь (Runtime Re-optimization & Feedback Loop)              |
+|     8.6 | Кэширование планов и обратная связь по избирательности (Plan Caching & Selectivity Feedback)  |
+|     8.7 | Форматы хранения PAX / Apache Arrow (PAX / Arrow Layouts)                                     |
+|     8.8 | Снимки, клонирование и резервное копирование (Copy-on-write Snapshots, Backup & Restore)      |
