--- a/Documentation/4x06.md
+++ b/Documentation/4x06.md
@@ -1,9 +1,13 @@
-# 📘 4.6 — Внешние процедуры и плагины (External Procedures, dlopen)
+# 🧱 Блок 4.6 — Внешние процедуры и плагины (External Procedures, dlopen)
+
+---
 
 ## 🆔 Идентификатор блока
 
-* Пакет 4 — Интерфейсы и Интеграции
-* Блок 4.6 — Внешние процедуры и плагины (External Procedures, dlopen)
+* **Пакет:** 4 — Интерфейсы и Интеграции
+* **Блок:** 4.6 — Внешние процедуры и плагины (External Procedures, dlopen)
+
+---
 
 ## 🎯 Назначение
 
