--- a/Documentation/0x00.md
+++ b/Documentation/0x00.md
@@ -15,4 +15,4 @@
 | 9  | Расширяемость                     | 6                                    |
 | 10 | Тестируемость и структура проекта | 6                                    |
 | 11 | Дополнительно                     | 5                                    |
-|    |    **Всего: 90 блоков**           | ✅ **90 архитектурных блоков**      |
+|    |    **Всего:**                     | ✅ **90 архитектурных блоков**      |
