--- a/Documentation/0x00.md
+++ b/Documentation/0x00.md
@@ -1,4 +1,4 @@
-### 🔍 Повторный аудит: Количество архитектурных блоков In-Memory РСУБД
+### 🔍 Аудит: Количество архитектурных блоков In-Memory РСУБД
 
 #### 📁 Структура по финальным пакетам и блокам:
 
